feat: 모먼트 로그 기록 계약 보강
